{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 99,
  "lineage": "66ac83a9-f972-3df8-11fa-21ef81f54e93",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:internet-gateway/igw-0cd0f4f064d39c823",
            "id": "igw-0cd0f4f064d39c823",
            "owner_id": "723738378076",
            "vpc_id": "vpc-0f24ebb8b103e1840"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0948acef360a969cd",
            "network_interface_id": "eni-0d600cc9d3e9b2e9f",
            "private_ip": "10.0.1.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e143027137b7c35"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:route-table/rtb-04ebd41f20b7351e1",
            "id": "rtb-04ebd41f20b7351e1",
            "owner_id": "723738378076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd0f4f064d39c823",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f24ebb8b103e1840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:route-table/rtb-0c8d9194690914b25",
            "id": "rtb-0c8d9194690914b25",
            "owner_id": "723738378076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0948acef360a969cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f24ebb8b103e1840"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.mynat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d013a065a80c3a5",
            "route_table_id": "rtb-0c8d9194690914b25",
            "subnet_id": "subnet-02e143027137b7c35"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.mynat",
            "module.vpc.aws_route_table.table2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c61f259afac0db11",
            "route_table_id": "rtb-04ebd41f20b7351e1",
            "subnet_id": "subnet-05ef470242920c6b7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.table1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:subnet/subnet-02e143027137b7c35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e143027137b7c35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723738378076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f24ebb8b103e1840"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:subnet/subnet-05ef470242920c6b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ef470242920c6b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "723738378076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f24ebb8b103e1840"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:723738378076:vpc/vpc-0f24ebb8b103e1840",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfb6474ddf5f9b4e",
            "default_route_table_id": "rtb-09248fc5df4d45326",
            "default_security_group_id": "sg-03bf4a099d0847c5f",
            "dhcp_options_id": "dopt-099c8f1712a04119d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f24ebb8b103e1840",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09248fc5df4d45326",
            "owner_id": "723738378076",
            "tags": {
              "name": "cluster-vpc"
            },
            "tags_all": {
              "name": "cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}